--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/children_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/children_case.component.html
@@ -51,7 +51,7 @@
 
                                     <div class="form-group">
                                         <label for="Name">Name *</label>
-                                        <textarea placeholder="Name" [formControl]="caseChildrenForm.controls['Name']" class="form-control"></textarea>
+                                        <textarea placeholder="Name" formControlName="Name" class="form-control"></textarea>
                                         <div>
                                             <small *ngIf="caseChildrenForm.controls['Name'].hasError('required') && caseChildrenForm.controls['Name'].touched" class="mat-text-warn">Name is required.</small>
                                         </div>
@@ -60,7 +60,7 @@
                                     <div class="form-group">
                                         <label for="Age">Age *</label>
                                         <div class="form-group" [class.has-danger]="caseChildrenForm.controls['Age'].invalid && caseChildrenForm.controls['Age'].touched">
-                                            <input type="number" id="Age" [formControl]="caseChildrenForm.controls['Age']" class="form-control" />
+                                            <input type="number" id="Age" formControlName="Age" class="form-control" />
                                             <small *ngIf="caseChildrenForm.controls['Age'].touched && caseChildrenForm.controls['Age'].invalid">
                                                 Value should be between 0 and 99
                                             </small>
@@ -71,7 +71,7 @@
                                         <label for="GenderLookupId">Gender *</label>
                                         <ng-select [options]="genderLookupOptionsList"
                                                    placeholder="Select Gender"
-                                                   [formControl]="caseChildrenForm.controls['GenderLookupId']"
+                                                   formControlName="GenderLookupId"
                                                    [allowClear]="true">
                                         </ng-select>
                                         <div>
@@ -83,7 +83,7 @@
                                         <label for="RelationshipWithAbuserLookupId">Relationship With Abuser *</label>
                                         <ng-select [options]="relationshipWithAbuserLookupOptionsList"
                                                    placeholder="Select Relationship"
-                                                   [formControl]="caseChildrenForm.controls['RelationshipWithAbuserLookupId']"
+                                                   formControlName="RelationshipWithAbuserLookupId"
                                                    [allowClear]="true">
                                         </ng-select>
                                         <div>
