--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
@@ -11,7 +11,7 @@
                     <div class="form-group">
                         <label for="ChildrenDeceasedLookupId">Any children deceased/miscarried/aborted?</label>
                         <ss-multiselect-dropdown [options]="childrenDeceasedLookupOptionsList"
-                                                 [formControl]="clientAndHouseholdForm.controls['ChildrenDeceasedLookupId']"
+                                                 formControlName="ChildrenDeceasedLookupId"
                                                  [(ngModel)]="caseBook.FamilyHouseHold.ChildrenDeceasedLookupArray">
 
                         </ss-multiselect-dropdown>
@@ -21,7 +21,7 @@
                         <label for="HouseHoldIncomeLookupId">Household income</label>
                         <ng-select [options]="incomeLookupOptionsList"
                                    placeholder="Select"
-                                   [formControl]="clientAndHouseholdForm.controls['HouseHoldIncomeLookupId']"
+                                   formControlName="HouseHoldIncomeLookupId"
                                    [allowClear]="true">
                         </ng-select>
                     </div>
@@ -30,25 +30,25 @@
                         <label for="SoughtHelpYesNoLookupId">Have you sought help for your issues before coming to My Choices?</label>
                         <ng-select [options]="yesNoOptionsList"
                                    placeholder="Select"
-                                   [formControl]="clientAndHouseholdForm.controls['SoughtHelpYesNoLookupId']"
+                                   formControlName="SoughtHelpYesNoLookupId"
                                    [allowClear]="true">
                         </ng-select>
                     </div>
 
                     <div class="form-group">
                         <label for="SoughtHelpDesc">yes, specify</label>
-                        <input [formControl]="clientAndHouseholdForm.controls['SoughtHelpDesc']" class="form-control" />
+                        <input formControlName="SoughtHelpDesc" class="form-control" />
                     </div>
 
                     <div class="form-group">
                         <label for="SoughtHelpOutPut">If yes, what was the outcome of that help?</label>
-                        <input [formControl]="clientAndHouseholdForm.controls['SoughtHelpOutPut']" class="form-control" />
+                        <input formControlName="SoughtHelpOutPut" class="form-control" />
                     </div>
 
                     <div class="form-group">
                         <label for="PeacemakerAssistanceLookupId">If you would like Operation Peacemaker to assist you with your current domestic violence situation, please select the services you would make use of</label>
                         <ss-multiselect-dropdown [options]="peacemakerAssistanceOptionsList"
-                                                 [formControl]="clientAndHouseholdForm.controls['PeacemakerAssistanceLookupId']"
+                                                 formControlName="PeacemakerAssistanceLookupId"
                                                  [(ngModel)]="caseBook.FamilyHouseHold.PeacemakerAssistanceLookupArray">
 
                         </ss-multiselect-dropdown>
@@ -56,7 +56,7 @@
 
                     <div class="form-group">
                         <label for="PeacemakerAssistanceDesc">If other, please specify</label>
-                        <input [formControl]="clientAndHouseholdForm.controls['PeacemakerAssistanceDesc']" class="form-control" />
+                        <input formControlName="PeacemakerAssistanceDesc" class="form-control" />
                     </div>
 
                 </div>
@@ -74,7 +74,7 @@
                         <label for="PeacemakerFollowupYesNoLookupId">Would you like a Peacemaker to do follow up with you?</label>
                         <ng-select [options]="yesNoOptionsList"
                                    placeholder="Select"
-                                   [formControl]="clientAndHouseholdForm.controls['PeacemakerFollowupYesNoLookupId']"
+                                   formControlName="PeacemakerFollowupYesNoLookupId"
                                    [allowClear]="true">
                         </ng-select>
                     </div>
@@ -83,7 +83,7 @@
                         <label for="ClientSignedRegistrationFormYesNoLookupId">Did the client sign the registration form?</label>
                         <ng-select [options]="yesNoOptionsList"
                                    placeholder="Select"
-                                   [formControl]="clientAndHouseholdForm.controls['ClientSignedRegistrationFormYesNoLookupId']"
+                                   formControlName="ClientSignedRegistrationFormYesNoLookupId"
                                    [allowClear]="true">
                         </ng-select>
                     </div>
@@ -91,7 +91,7 @@
                     <div class="form-group">
                         <div class="form-group" [class.has-danger]="clientAndHouseholdForm.controls['ClientEmailId'].invalid && clientAndHouseholdForm.controls['ClientEmailId'].touched">
                             <label for="ClientEmailId">Client's Email</label>
-                            <input type="email" id="ClientEmailId" [formControl]="clientAndHouseholdForm.controls['ClientEmailId']" inputmode="email" class="form-control" />
+                            <input type="email" id="ClientEmailId" formControlName="ClientEmailId" inputmode="email" class="form-control" />
                             <small *ngIf="clientAndHouseholdForm.controls['ClientEmailId'].dirty && clientAndHouseholdForm.controls['ClientEmailId'].invalid">
                                 Please provide a valid email
                             </small>
@@ -102,7 +102,7 @@
                         <label for="ReligionLookupId">Religion</label>
                         <ng-select [options]="religionOptionsList"
                                    placeholder="Select"
-                                   [formControl]="clientAndHouseholdForm.controls['ReligionLookupId']"
+                                   formControlName="ReligionLookupId"
                                    [allowClear]="true">
                         </ng-select>
                     </div>
@@ -111,7 +111,7 @@
                         <label for="LevelOfEducationLookupId">Level of education</label>
                         <ng-select [options]="levelOfEducationOptionsList"
                                    placeholder="Select"
-                                   [formControl]="clientAndHouseholdForm.controls['LevelOfEducationLookupId']"
+                                   formControlName="LevelOfEducationLookupId"
                                    [allowClear]="true">
                         </ng-select>
                     </div>
@@ -120,14 +120,14 @@
                         <label for="VocationalSkillsLookupId">Vocational skills</label>
                         <ng-select [options]="vocationalSkillsOptionsList"
                                    placeholder="Select"
-                                   [formControl]="clientAndHouseholdForm.controls['VocationalSkillsLookupId']"
+                                   formControlName="VocationalSkillsLookupId"
                                    [allowClear]="true">
                         </ng-select>
                     </div>
 
                     <div class="form-group">
                         <label for="VocationalSkillsDesc">If other Vocational skills, please specify:</label>
-                        <input [formControl]="clientAndHouseholdForm.controls['VocationalSkillsDesc']" class="form-control" />
+                        <input formControlName="VocationalSkillsDesc" class="form-control" />
                     </div>
 
 
@@ -146,21 +146,21 @@
                         <label for="OccupationLookupId">Occupation</label>
                         <ng-select [options]="occupationOptionsList"
                                    placeholder="Select"
-                                   [formControl]="clientAndHouseholdForm.controls['OccupationLookupId']"
+                                   formControlName="OccupationLookupId"
                                    [allowClear]="true">
                         </ng-select>
                     </div>
 
                     <div class="form-group">
                         <label for="OccupationDesc">If self-employed or employed, please specify:</label>
-                        <input [formControl]="clientAndHouseholdForm.controls['OccupationDesc']" class="form-control" />
+                        <input formControlName="OccupationDesc" class="form-control" />
                     </div>
 
                     <div class="form-group">
                         <label for="ClientIncomeLookupId">Client Income</label>
                         <ng-select [options]="incomeLookupOptionsList"
                                    placeholder="Select"
-                                   [formControl]="clientAndHouseholdForm.controls['ClientIncomeLookupId']"
+                                   formControlName="ClientIncomeLookupId"
                                    [allowClear]="true">
                         </ng-select>
                     </div>
@@ -168,14 +168,14 @@
                     <div class="form-group">
                         <label for="HouseHoldMembersLivingLookupId">Household members living in same house</label>
                         <ss-multiselect-dropdown [options]="householdMembersOptionsList"
-                                                 [formControl]="clientAndHouseholdForm.controls['HouseHoldMembersLivingLookupId']"
+                                                 formControlName="HouseHoldMembersLivingLookupId"
                                                  [(ngModel)]="caseBook.FamilyHouseHold.HouseHoldMembersLivingLookupArray">
                         </ss-multiselect-dropdown>
                     </div>
 
                     <div class="form-group">
                         <label for="YearOfMarriage">Year of marriage</label>
-                        <input [formControl]="clientAndHouseholdForm.controls['YearOfMarriage']" digits maxlength="4" class="form-control" />
+                        <input formControlName="YearOfMarriage" digits maxlength="4" class="form-control" />
                         <small *ngIf="clientAndHouseholdForm.controls['YearOfMarriage'].dirty && clientAndHouseholdForm.controls['YearOfMarriage'].invalid">
                             Please provide a valid year
                         </small>
@@ -183,7 +183,7 @@
 
                     <div class="form-group">
                         <label for="ClientAgeAtFirstChild">At what age did client have her first child?</label>
-                        <input [formControl]="clientAndHouseholdForm.controls['ClientAgeAtFirstChild']" digits maxlength="2" class="form-control" />
+                        <input formControlName="ClientAgeAtFirstChild" digits maxlength="2" class="form-control" />
                         <small *ngIf="clientAndHouseholdForm.controls['ClientAgeAtFirstChild'].dirty && clientAndHouseholdForm.controls['ClientAgeAtFirstChild'].invalid">
                             Please provide a valid age
                         </small>
